# meal-circuit

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  DISCLAIMER.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  design-qa.md  pyproject.toml  start.ps1  test.ps1
android/: README.md  build.gradle.kts  settings.gradle.kts
docs/: adaptive-closed-loop-verification.md  agent-workbench-v2.md  agent-workbench.md  backup-restore.md  domain-v1.md  multidevice-acceptance.md  portable-data-v1.md  release.md  sync-protocol-v1.md  threat-model.md
mealcircuit/: __init__.py  adaptive.py  agent_cli.py  agent_intelligence.py  agent_workspace.py  ai.py  checkins.py  configuration.py  contracts.py  crypto.py  db.py  db_migrations.py  desktop.py  domain.py  domain_store.py  meal_modes.py  menu_semantics.py  migration.py  personalization.py  planning.py  portability.py  portable.py  professional.py  review_lifecycle.py  secret_store.py  server.py  service.py  storage.py  sync.py  validation.py
packaging/: mealcircuit.spec
protocol/: checkin-modules-v1.json  domain-v1.schema.json  state-machines-v1.json  sync-v1.openapi.json
rules/: core.md
sync_server/: Caddyfile  Dockerfile  README.md  __init__.py  admin.py  alembic.ini  app.py  blob_storage.py  compose.yaml  main.py
templates/: profile.md  settings.json
tests/: test_adaptive.py  test_agent_workspace.py  test_mealcircuit.py  test_portable.py  test_release_workflow.py  test_sync_integration.py  test_sync_postgres.py  test_sync_server.py
tools/: cross_client_sync_test.py  (+5 more)
(+68 files in other folders)
